--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ php:
   - 7.1
 
 before_script:
-  - apt-get update && apt-get install -y unzip
-  - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-  - composer install
-  - cp .env.example .env
+  - cp .env.testing .env
+  - composer self-update
+  - composer install --no-interaction
 
 script:
   - vendor/bin/phpunit --coverage-text --colors
