--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "axios": "^0.17.1",
     "bootstrap-sass": "^3.3.7",
+    "browser-sync": "^2.26.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "cross-env": "^5.1.3",
     "jquery": "^3.3.1",
     "laravel-mix": "^2.1.2",
@@ -19,7 +21,7 @@
     "vue": "^2.5.13"
   },
   "dependencies": {
-    "admin-lte": "^2.4.8",
+    "admin-lte": "^2.3.8",
     "bootstrap": "^3.3.7",
     "datatables": "^1.10.13",
     "font-awesome": "^4.7.0",
