--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "ext-json": "*",
         "barryvdh/laravel-dompdf": "^0.8.2",
+        "binarytorch/larecipe": "^1.2",
         "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~4.0",
         "gloudemans/shoppingcart": "^2.5",
