--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,7 @@ PUSHER_APP_SECRET=
 
 SHIPPING_COST=0
 TAX_RATE=0
-DEFAULT_CURRENCY=USD
+DEFAULT_CURRENCY=usd
 CURRENCY_SYMBOL=$
 
 MAILCHIMP_API_KEY=
