--- a/composer.json
+++ b/composer.json
@@ -70,5 +70,11 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Laracommerce/LaravelShoppingcart"
+        }
+    ]
 }
