--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
         "filp/whoops": "~2.0"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/helper.php"
+        ],
         "classmap": [
             "database"
         ],
@@ -67,11 +70,5 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Laracommerce/LaravelShoppingcart"
-        }
-    ]
+    "prefer-stable": true
 }
